--- a/css/screen.css
+++ b/css/screen.css
@@ -1,15 +1,34 @@
 body {
-    background-color: lightgreen;
-}
-
-@media (min-width: 600px) {
-    p {
-        font-size: 1.25rem;
+    background: #79e4b7;
+    text-align: center;
+  }
+  
+  label {
+    color: rgb(0, 0, 0);
+    font-size: 2em;
+  }
+  
+  input {
+    width: 80%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: none;
+    background-color: #C0C0C0;
+  }
+  
+  input[type=submit] {
+    width: 20%;
+  }
+  
+  @media only screen and (min-width: 480px) {
+    input {
+      width: 70%;
     }
-}
-
-@media (min-width: 800px) {
-    p {
-        font-size: 1.5rem;
-        line-height: 1.5;
+  }
+  
+  @media only screen and (min-width: 992px) {
+    input {
+      width: 50%;
     }
+  }
